--- a/bluesquare.html
+++ b/bluesquare.html
@@ -55,11 +55,11 @@
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
-						<p style="color: #e5e5e5;">coming soon!</p>
+						<p>An established, growing pool equipment company wanted to position themselves as THE brand for new innovations and solutions. Though the logo was already established the client wanted to give the brand a fresh, updated look and feel.</p>
                     </div>
 					<div class="right">
 						<h3>The Solution</h3>
-                        <p style="color: #e5e5e5;">coming soon!</p>
+                        <p>Our solution was to move the company from a product-oriented to a benefit-oriented look and feel. This was accomplished by featuring rich lifestyle images, a fresh font face and a clean, forward-leaning look and feel for the swimming pool industry.</p>
 				    </div>
 				</div>
 			</div>
