--- a/kyle.html
+++ b/kyle.html
@@ -54,11 +54,11 @@
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
-						<p style="color: #e5e5e5;">coming soon!</p>
+						<p>Our challenge was to create a digital ad campaign for a sweepstakes that promoted a group of international hotel brands.</p>
                     </div>
 					<div class="right">
 						<h3>The Solution</h3>
-                        <p style="color: #e5e5e5;">coming soon!</p>
+                        <p>We created a series of emails and online banner ads promoting a “Daytona Crew Member for the Day” sweepstakes. The campaign design won two Adrian Awards, one of the travel industry’s most prestigious marketing honors.</p>
 				    </div>
 				</div>
 			</div>
