--- a/library.html
+++ b/library.html
@@ -57,7 +57,7 @@
 						<a class="iconz"><span class="fadeIn">Print</span><img src="img/icons/print-icon.png"/></a>
 					</div>
 					<h3>The Solution</h3>
-                    <p>Shapes of the burton Barr Central Library introduces children to architecture by walking through the process of design and ending with paper "building blocks". Children use the blocks to create their own library design.  As children learn about architecture and design, they're also exploring their library. The book's unique shape, die cuts,  and copper ink were inspired by the awarrd-winning architecture of the copper-wrapped library.  When stood up on end, the booklet actually resembles the shape of the library including the buildings "north sails".</p>
+                    <p>Shapes of the Burton Barr Central Library introduces children to architecture by walking through the process of design and ending with paper "building blocks". Children use the blocks to create their own library design.  As children learn about architecture and design, they're also exploring their library. The book's unique shape, die cuts,  and copper ink were inspired by the award-winning architecture of the copper-wrapped library.  When stood up on end, the booklet actually resembles the shape of the library including the buildings "north sails".</p>
 				</div>
 			</div>
 
