--- a/mms.html
+++ b/mms.html
@@ -57,22 +57,22 @@
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
-						<p style="color: #e5e5e5;">coming soon!</p>
+						<p>The challenge was to create a brand that had an established, trustworthy corporate feel while suggesting some intrinsic product qualities. The product is a collection of marketing solutions targeting businesses with physicians or other medical practices.</p>
                     </div>
 					<div class="right">
 						<h3>The Solution</h3>
-                        <p style="color: #e5e5e5;">coming soon!</p>
+                        <p>We created a logo and brand that featured a small box, sometimes shown in the hands of an established physician.  “Proven marketing solutions. One simple package”. The palette was inspired by the colors typically found on medical scrubs. The icon resembles a box or package while the font suggests a strong trustworthy brand.</p>
 				    </div>
 				</div>
 			</div>
 
 			<div class="section-three">
 				<div class="wrapper" style="border-top: 1px solid #cccccc">
-                    <div class="top"><img class="left-block pad-top-64 max-full" src="img/19-logo-long.jpg"/></div>
+                    <img class="left-block pad-top-64 max-full center" src="img/19-logo-long.jpg"/>
                     <h3>Logo Exploration</h3>
                     <div class="top"><img class="left-block max-full" src="img/19-logo-long2.jpg"/></div>
                     <div class="bottom"><img class="left-block max-full" src="img/19-logo-long3.jpg"/></div>
-					<h3>Color Pallete</h3>
+					<h3>Color Palette</h3>
                     <div class="flip-container one-third" ontouchstart="this.classList.toggle('hover');">
 						<div class="flipper">
 						<div class="front" style="background-color:#818285;"></div>
