--- a/pc.html
+++ b/pc.html
@@ -75,7 +75,7 @@
 					</div>
 					<div class="right">
 						<h3>The Solution</h3>
-						<p>We created and launched cohesive brand identity which blended strong medical imagery (x-rays) with clean white space and warm sepia-tone lifestyles combined with benefit - oriented outcomes.  Our successful launch helped The Pain Center grow into the largest pain practice in Arizona.</p>
+						<p>We created and launched a cohesive brand identity which blended strong medical imagery (x-rays) with clean white space and warm sepia-tone lifestyles combined with benefit - oriented outcomes.  Our successful launch helped The Pain Center grow into the largest pain practice in Arizona.</p>
 					</div>
 				</div>
 			</div>
@@ -83,7 +83,7 @@
 			<div class="section-three">
 				<div class="wrapper" style="border-top: 1px solid #cccccc">
 					
-					<img class="left-block pad-top-64 max-full" src="img/02-header-logo.png"/>
+					<img class="left-block pad-top-64 max-full center" src="img/02-header-logo.png"/>
 					<h3>Color Pallete</h3>
 					<div class="top">
 						<div class="flip-container one-half" ontouchstart="this.classList.toggle('hover');">
@@ -176,7 +176,7 @@
 			<div class="section-three" style="background-color: #96adc1;" >
 				<div class="wrapper small pad-top-64">
 					<img src="img/02-award.png"/>
-					<p class="center white">A successful brand launch plus over 10 years of consistent branding helped make The Pain Center Arizona’s # 1 pain practice for 3 years running.</p>
+					<p class="center white">A successful brand launch plus over 10 years of consistent branding helped make The Pain Center Arizona’s # 1 pain practice for several years running.</p>
 				</div>
 			</div>
 			
