--- a/shc.html
+++ b/shc.html
@@ -65,7 +65,7 @@
 					</div>
 					<div class="right">
 						<h3>The Solution</h3>
-						<p>A series of colorful hand illustrations were created to poject a feel of personal touch and care while bold headlines added a strong graphical element to command attention in playful way.</p>
+						<p>A series of colorful hand illustrations were created to project a feel of personal touch and care while bold headlines added a strong graphical element to command attention in playful way.</p>
 					</div>
 				</div>
 			</div>
