--- a/skytouch.html
+++ b/skytouch.html
@@ -57,11 +57,11 @@
 					</div>
 					<div class="left">
 						<h3>The Challenge</h3>
-						<p style="color: #e5e5e5;">coming soon!</p>
+						<p>A large international hotel brand had been perfecting a cloud-based hotel management operating system for years. The client desired to begin marketing the OS for external use. The challenge was to create a new name and brand that spoke to the fresh, forward-leaning, and strong, proven nature of the product.</p>
                     </div>
 					<div class="right">
 						<h3>The Solution</h3>
-                        <p style="color: #e5e5e5;">coming soon!</p>
+                        <p>We created the name SkyTouch to be both aspirational and benefit oriented while suggesting that the product is a cloud-based solution. The color palette was inspired by sky tones and the logo was designed to resemble an ascending “S” an “upward arrow” and an angled hotel rising into the sky.</p>
 				    </div>
 				</div>
 			</div>
