--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
 						<div class="item"><img class="center-image" src="img/10-logo.png"/></div>
 						<div class="item"><img class="center-image" src="img/20-logo.png"/></div>
 					</div>
-					<a href="work.html" class="fade-effect">view our clients</a>
+					<a href="#work" class="fade-effect">view our work</a>
 				</div>
 				<div class="item">
 					<video><source src="video/vid2.mp4" type="video/mp4" /></video>
 					<img class="fallback" src="img/vid2.jpg"/>
-					<h1>trusted by the world's most beloved brands</h1>
+					<h1>CREATIVE THAT DRIVES RESULTS</h1>
 					<div class="owl-carousel-inner graphic">
 						<div class="item"><img class="center-image" src="img/10-logo.png"/></div>
 						<div class="item"><img class="center-image" src="img/20-logo.png"/></div>
 					</div>
-					<a href="work.html" class="fade-effect">view our clients</a>
+					<a href="#work" class="fade-effect">view our work</a>
 				</div>
 			</div>
 			<div class="wrapper">
@@ -64,7 +64,7 @@
 			</div>
 		</div>
 		
-		<div class="section-one">
+		<div class="section-one" id="work" data-menu-offset="-64">
 			<div class="wrapper">
 				<h1>our work</h1>
 				<div class="gallery">
@@ -185,7 +185,9 @@
 		<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
 		<script>
 			$( document ).ready(function() {
-				$('.gallery').finalTilesGallery({ margin: 12, gridCellSize: 12, imageSizeFactor: 1, minTileWidth: 100});
+				var s = skrollr.init( {  } ); //init parallax
+                skrollr.menu.init(s, {animate: true,easing: 'swing', scale: 2,duration: function(currentTop, targetTop) {return 1000;}});
+                $('.gallery').finalTilesGallery({ margin: 12, gridCellSize: 12, imageSizeFactor: 1, minTileWidth: 100});
 				$(".header-one .owl-carousel-outer").owlCarousel({ slideSpeed : 500, pagination: true,  autoPlay: false, singleItem : true, mouseDrag:false, touchDrag:false, afterMove : animate	});
 				$(".header-one .owl-carousel-inner").owlCarousel({ slideSpeed : 300, pagination: false, autoPlay: true,  singleItem : true, mouseDrag:false, touchDrag:false,  });
 				$(".section-two .owl-carousel").owlCarousel({items:5,itemsDesktop : [5000,1],itemsDesktopSmall: [640,1],itemsTablet: [480,1],itemsMobile : false,navigation : true,slideSpeed : 300, paginationSpeed : 400,navigationText: ["",""],pagination: false,autoPlay: false	});
