polished up additional content

--- a/about.html
+++ b/about.html
@@ -102,28 +102,46 @@
             <div class="section-three" style="background-color: #fff;">
 				<div class="wrapper"><h3>Our Studio</h3>
 					<div class="owl-carousel zoom-gallery">
-                        <div class="item"><a href="img/99-gallery1-large.jpg" class="hoverZoomLink"><img src="img/99-gallery1.jpg" class="shadow"/></a><p>Collective Office Space</p></div>
-						<div class="item"><a href="img/99-gallery2-large.jpg" class="hoverZoomLink"><img src="img/99-gallery2.jpg" class="shadow"/></a><p>Monthly art exhibits curated by Shade Projects</p></div>
-						<div class="item"><a href="img/99-gallery3-large.jpg" class="hoverZoomLink"><img src="img/99-gallery3.jpg" class="shadow"/></a><p>Located in the heart of the Phoenix Art Disctrict</p></div>
-						<div class="item"><a href="img/99-gallery4-large.jpg" class="hoverZoomLink"><img src="img/99-gallery4.jpg" class="shadow"/></a><p>Studio A in Production</p></div>
-                        <div class="item"><a href="img/99-gallery5-large.jpg" class="hoverZoomLink"><img src="img/99-gallery5.jpg" class="shadow"/></a><p>Studio B White Wall</p></div>
-                        <div class="item"><a href="img/99-gallery6-large.jpg" class="hoverZoomLink"><img src="img/99-gallery6.jpg" class="shadow"/></a><p>Studio C Commercial Shooting</p></div>
-                        <div class="item"><a href="img/99-gallery7-large.jpg" class="hoverZoomLink"><img src="img/99-gallery7.jpg" class="shadow"/></a><p>Conference Room</p></div>
-                        <div class="item"><a href="img/99-gallery8-large.jpg" class="hoverZoomLink"><img src="img/99-gallery8.jpg" class="shadow"/></a><p>Floor 1 Hallway</p></div>
+                        <div class="item"><a href="img/99-gallery1-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery1.jpg" class="shadow"/></a><p>Collaborative Office Space</p></div>
+						<div class="item"><a href="img/99-gallery2-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery2.jpg" class="shadow"/></a><p>Monthly art exhibits curated by Shade Projects</p></div>
+						<div class="item"><a href="img/99-gallery3-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery3.jpg" class="shadow"/></a><p>Located in the heart of the Phoenix Art Disctrict</p></div>
+						<div class="item"><a href="img/99-gallery4-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery4.jpg" class="shadow"/></a><p>Green screen studio on location</p></div>
+                        <div class="item"><a href="img/99-gallery5-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery5.jpg" class="shadow"/></a><p>Studio A Infinity Wall on location</p></div>
+                        <div class="item"><a href="img/99-gallery6-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery6.jpg" class="shadow"/></a><p>Studio B on location</p></div>
+                        <div class="item"><a href="img/99-gallery7-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery7.jpg" class="shadow"/></a><p>Conference Room</p></div>
+                        <div class="item"><a href="img/99-gallery8-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery8.jpg" class="shadow"/></a><p>Lots of space to get creative</p></div>
+                        <!--<div class="item"><a href="img/99-gallery9-large.jpg" class="hoverZoomLink" title="Gallery"><img src="img/99-gallery9.jpg" class="shadow"/></a><p>Meetings in the coffee house</p></div>-->
                     </div>
 				</div>
 			</div>
             
             <div class="section-three" style="background-color: #a9a9a9;" >
-				<div class="wrapper small pad-top-64">
+				<div class="wrapper smaller pad-top-64">
                     <div class="owl-carousel awards">
                         <div class="item">
                             <img src="img/99-award.png"/>
-                            <p class="center white">A successful brand launch plus over 10 years of consistent branding helped make The Pain Center Arizona’s # 1 pain practice for 3 years running.</p>
+                            <p class="center white">HSMAI Adrian Award for Digital Marketing in the Category of a Game</p>
+                            <a href="#" style="color: #fff;">View Work</a>
                         </div>
                         <div class="item">
                             <img src="img/99-award.png"/>
-                            <p class="center white">A successful brand launch plus over 10 years of consistent branding helped make The Pain Center Arizona’s # 1 pain practice for 3 years running.</p>
+                            <p class="center white">HSMAI Adrian Award for Digital Marketing for a Contest Website</p>
+                            <a href="#" style="color: #fff;">View Work</a>
+                        </div>
+                        <div class="item">
+                            <img src="img/99-award.png"/>
+                            <p class="center white">HAMAI Adrian Award for Digital Marketing Campaign in the Category of a Contest</p>
+                            <a href="#" style="color: #fff;">View Work</a>
+                        </div>
+                        <div class="item">
+                            <img src="img/99-award.png"/>
+                            <p class="center white"><strong>Hotel Mobile App</strong><br/>AIGA: American Institute of Graphic Arts Arizona 25 year Legacy Exhibit</p>
+                            <a href="#" style="color: #fff;">View Work</a>
+                        </div>
+                        <div class="item">
+                            <img src="img/99-award.png"/>
+                            <p class="center white"><strong>Library Architecture Book</strong><br/>AIGA: American Institute of Graphic Arts Arizona 25 year Legacy Exhibit</p>
+                            <a href="#" style="color: #fff;">View Work</a>
                         </div>
                     </div>
 				</div>
