--- a/index.html
+++ b/index.html
@@ -134,38 +134,38 @@
 			<div class="wrapper">
 				<h1>branding</h1>
 				<div class="owl-carousel">
-					<div class="item">
+					<div class="item smaller">
 						<img src="img/03-logo.jpg"/>
 						<p>Natural Reflection</p>
 						<p>Designer and builder of luxury pools and spas.</p>
 					</div>
-					<div class="item">
+					<div class="item smaller">
 						<img src="img/04-logo.jpg"/>
 						<p>Astancia Development Group</p>
 						<p>Logo and branding solution for a high-end land development group.</p>
 					</div>
-					<div class="item">
+					<div class="item smaller">
 						<img src="img/05-logo.jpg"/>
 						<p>Mobistro</p>
 						<p>Developer of mobile phone solutions for the restaurant industry.</p>
 					</div>
-					<div class="item">
+					<div class="item smaller">
 						<img src="img/06-logo.jpg"/>
 						<p>Wilson Capital</p>
 						<p>Capital development group for buildings and real estate.</p>
 					</div>
-					<div class="item">
+					<div class="item smaller">
 						<img src="img/07-logo.jpg"/>
 						<p>Urban Pasta is a purveyor of homemade pastas and other delicious sundries. The brand is designed to imply a simple, tasteful plate of pasta.</p>
 					</div>
-					<div class="item">
+					<div class="item smaller">
 						<img src="img/08-logo.jpg"/>
 						<p>The Nanny Works brand and logo is inspired by the idea of a protective umbrella and the famous nanny from children's literature who carried one.</p>
 					</div>
-					<div class="item">
+					<div class="item smaller">
 						<img src="img/18-logo.jpg"/>
 						<p>GoNotes</p>
-						<p>Experts at saving you time to do what you do best.</p>
+						<p>Logo inspired by the shape of a common office paperclip the form also resembles the letters “G” and “N” for GoNotes</p>
 					</div>
 				</div>
 			</div>
