--- a/shc.html
+++ b/shc.html
@@ -103,8 +103,8 @@
 
 			<div class="section-three" style="background-color: #f3f4f5;" >
 				<div class="wrapper small">
-					<h3>Yano Creative constantly impressed us with both their craftsmanship and creativity. We did better work because we worked with them. </h3>
-					<p class="center">-John Doe</p>
+					<h3>"Passing along a compliment on the ad.  We are getting a great response ... Very eye catching ... Great job!"</h3>
+					<p class="center">-Geri,<br/>Scottsdale Healthcare</p>
 				</div>
 			</div>
 
