--- a/play.html
+++ b/play.html
@@ -14,9 +14,13 @@
 	</head>
 	<body>
 		<div class="nav"></div>
-		
-		<div class="christmas-cards"></div>
-		<!--<iframe style="min-height: 640px;" src="games/christmas-cards/www/index.html" width="100%" height="100%"></iframe>-->
+
+		<div class="section-game">
+			<div class="wrapper">
+				<iframe class="christmas-cards" src="games/christmas-cards/www/index.html"></iframe>
+			</div>
+		</div>
+
 
 		<div class="footer"></div>
 	
@@ -29,8 +33,17 @@
 			$( document ).ready(function() {
 			    $('.nav').load('nav.html');
                 $('.footer').load('footer.html');
-                $('.christmas-cards').load('games/christmas-cards/www/index.html');
+                $(".christmas-cards").load(function(){
+					var obj = $('.christmas-cards');
+                    adjustSize(obj);
+                    $( window ).resize(function(){ adjustSize(obj); });
+				});
 			});
+
+            function adjustSize(obj){
+                obj.css("height", "0px");
+                obj.css("height", obj.contents().height() + "px");
+            }
 		</script>
 	</body>
 </html>
