enable direct url input without .html extension

--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
 			<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
 			<script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
             <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+			<script type="text/javascript" src="js/functions.js"></script>
 			<script>
 				$(document).ready(function() {
                     $('.nav').load('nav.html');
