--- a/mms.html
+++ b/mms.html
@@ -101,6 +101,7 @@
 			<script type="text/javascript" src="js/skrollr.menu.min.js"></script>
 			<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
             <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
+			<script type="text/javascript" src="js/functions.js"></script>
 			<script>
 				$(document).ready(function() {
                     $('.nav').load('nav.html');
