--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 		<script type="text/javascript" src="js/skrollr.min.js"></script>
 		<script type="text/javascript" src="js/skrollr.menu.min.js"></script>
 		<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
+		<script type="text/javascript" src="js/functions.js"></script>
 		<script>
 			$( document ).ready(function() {
 			    $('.nav').load('nav.html');
