--- a/library.html
+++ b/library.html
@@ -105,6 +105,7 @@
 			<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
 			<script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
             <script type="text/javascript" src="js/enquire.min.js"></script>
+			<script type="text/javascript" src="js/functions.js"></script>
 			<script>
 				$(document).ready(function() {
                     $('.nav').load('nav.html');
