--- a/pc.html
+++ b/pc.html
@@ -177,6 +177,7 @@
 			<script type="text/javascript" src="js/skrollr.min.js"></script>
 			<script type="text/javascript" src="js/skrollr.menu.min.js"></script>
 			<script type="text/javascript" src="js/jquery.finalTilesGallery.js"></script>
+			<script type="text/javascript" src="js/functions.js"></script>
 			<script>
 				$(document).ready(function() {
                     $('.nav').load('nav.html');
