force css version update

--- a/play.html
+++ b/play.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/final-tiles-gallery.css">
-		<link rel="stylesheet" href="css/stylesheet.css">
+		<link rel="stylesheet" href="css/stylesheet.css?v=1.0">
 		<link rel='shortcut icon' type='image/x-icon' href='img/favicon.ico' />
 	</head>
 	<body>
