Added new logos

--- a/index.html
+++ b/index.html
@@ -169,6 +169,51 @@
 						<p>GoNotes</p>
 						<p>Logo inspired by the shape of a common office paperclip the form also resembles the letters “G” and “N” for GoNotes</p>
 					</div>
+
+					<div class="item smaller">
+						<img src="img/22-logo.jpg"/>
+						<p>Accura</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/23-logo.jpg"/>
+						<p>Autoline</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/24-logo.jpg"/>
+						<p>Creative Leather</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/25-logo.jpg"/>
+						<p>Lolo's</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/26-logo.jpg"/>
+						<p>Maguire & Fish</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/27-logo.jpg"/>
+						<p>Myer</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/28-logo.jpg"/>
+						<p>Peter Thomas Designs</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/29-logo.jpg"/>
+						<p>Roosevelt Church</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/30-logo.jpg"/>
+						<p>Skytouch</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/31-logo.jpg"/>
+						<p>Varitec</p>
+					</div>
+					<div class="item smaller">
+						<img src="img/32-logo.jpg"/>
+						<p>Whoopie</p>
+					</div>
 				</div>
 			</div>
 		</div>
