update game artwork

--- a/games/business-cards/www/index.html
+++ b/games/business-cards/www/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div class="row top-border">
                         <div class="col-xs-12">
-                            <img src="img/game-logo.png"/>
+                            <img src="img/game-logo.gif"/>
                         </div>
                     </div>
                 </div>
