--- a/php/success.html
+++ b/php/success.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color:#fff">
 	<head>
 		<meta charset="utf-8">
 		<title>Yano Creative</title>
@@ -16,7 +16,10 @@
 	<body>
 		<div class="section-one">
 			<div class="wrapper">
-				<a class="button" href="../index.html">go back</a>
+                <img src="../img/testimonial-game-artwork.png" style="max-width: 100%;">
+				<p style="margin-top: 24px;">Thank you for taking the time to share your thoughts. You are appreciated.</p>
+				<a class="soft-button" href="../play.html">return to game</a>
+				<a class="soft-button" href="../index.html">return to yanocreative.com</a>
 			</div>
 		</div>
 	</body>
