add error default message

--- a/games/business-cards/www/index.html
+++ b/games/business-cards/www/index.html
@@ -51,5 +51,8 @@
         <script type="text/javascript" src="js/EndGraphics.js"></script>
         <script type="text/javascript" src="js/Timer.js"></script>
         <script type="text/javascript" src="js/Game.js"></script>
+        <script>
+            if (window.Game == null){ document.getElementById('content').innerHTML = "<p style='text-align: center; width: 100%;'>We're sorry, but your browser is a bit too old to play this game.</p>"; }
+        </script>
     </body>
 </html>
