--- a/about-the-game-carousel.html
+++ b/about-the-game-carousel.html
@@ -6,8 +6,8 @@
     </div>
     <div class="item">
         <img src="img/card_image_2_2.png" />
-        <p>Recruiting Resources</p>
-        <p>Logo</p>
+        <p>Maguire & Fish</p>
+        <p>Recruiting Management</p>
     </div>
     <div class="item">
         <img src="img/card_image_3_2.png" />
