update game details

--- a/index.html
+++ b/index.html
@@ -217,6 +217,20 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="play-our-game">
+			<div class="wrapper">
+				<h1>PLAY OUR GAME</h1>
+				<p style="max-width: 540px; margin: 0 auto;">Business Cards is our twist on the classic card matching game. We developed the game as an interactive form of exploring some of our award-winning work while helping exercise your brain. Give it a try. But watch out. It’s addicting.</p>
+				<div class="left">
+					<img src="games/business-cards/www/img/game-logo.gif"/>
+					<a class="button" href="play.html">play now</a>
+				</div>
+				<div class="right">
+					<img src="img/cards-mockup.png"/>
+				</div>
+			</div>
+		</div>
 		
 		<div class="footer"></div>
 	
