--- a/about-the-game-carousel.html
+++ b/about-the-game-carousel.html
@@ -2,62 +2,62 @@
     <div class="item">
         <img src="img/card_image_1_2.png" />
         <p>Varitec Solutions</p>
-        <p>Leader in HVAC Solutions</p>
+        <p>HVAC solutions known for combining leading products with leading industry expertise</p>
     </div>
     <div class="item">
         <img src="img/card_image_2_2.png" />
         <p>Maguire & Fish</p>
-        <p>Recruiting Management</p>
+        <p>Recruiting services specializing in matching employees with employers in high-tec industries</p>
     </div>
     <div class="item">
         <img src="img/card_image_3_2.png" />
-        <p>Skytouch</p>
-        <p>Hotel Property Management Systems</p>
+        <p>Skytouch Technologies</p>
+        <p>“S” logo represents the company’s cloud-based hotel software and a hotel building rising into the sky</p>
     </div>
     <div class="item">
         <img src="img/card_image_4_2.png" />
         <p>Urban Pasta</p>
-        <p>Purveyor of homemade pastas</p>
+        <p>Purveyor of homemade pastas. The brand is designed to imply a simple, tasteful plate of pasta</p>
     </div>
     <div class="item">
         <img src="img/card_image_5_2.png" />
         <p>Wilson Capital</p>
-        <p>Capital development group</p>
+        <p>A capital development group specilazing in financial services for commercial buildings</p>
     </div>
     <div class="item">
         <img src="img/card_image_6_2.png" />
         <p>Astancia</p>
-        <p>Land Development Group</p>
+        <p>“A” logo and branding solution created for a high-end land development group</p>
     </div>
     <div class="item">
         <img src="img/card_image_7_2.png" />
         <p>GoNotes</p>
-        <p>Business Organization Service</p>
+        <p>ogo inspired by the shape of a common paperclip that also resembles the letters “G” and “N”</p>
     </div>
     <div class="item">
         <img src="img/card_image_8_2.png" />
         <p>Mobistro</p>
-        <p>Restaurant Technology Service</p>
+        <p>Logo created for a developeer of mobile phone solutions for the restaurant industry</p>
     </div>
     <div class="item">
         <img src="img/card_image_9_2.png" />
         <p>Creative Leather</p>
-        <p>Furniture Design & Distributer</p>
+        <p>“C/L” logo doubles as an abstract representation of the company’s custom chairs or sectionals</p>
     </div>
     <div class="item">
         <img src="img/card_image_10_2.png" />
         <p>Peter Thomas Designs</p>
-        <p>Home Furniture Designer</p>
+        <p>This custom furniture icon suggests both precision and artistry while imitating the letters “P” and “T” </p>
     </div>
     <div class="item">
         <img src="img/card_image_11_2.png" />
         <p>Climatec</p>
-        <p>Security & Safety Service</p>
+        <p>The “snowflake icon” implies air conditioning plus the merging of three commercial building</p>
     </div>
     <div class="item">
         <img src="img/card_image_12_2.png" />
         <p>Accura</p>
-        <p>Home Security Provider</p>
+        <p>This “A” icon we created to resemble a home displaying brilliant sound and wifi technology</p>
     </div>
 </div>
 <div class="navi">
