initialize what we do carousel

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 			</div>
 		</div>
 
+		<div class="what-we-do">
+			<h1>what we do</h1>
+			<div class="what-we-do-carousel"></div>
+		</div>
+
 		<div class="section-two-new experience">
 			<div class="wrapper">
 				<h1 style="padding-bottom:0;">experience</h1>
@@ -77,7 +82,7 @@
 						<a href="#cat-3" class="iconz"><span class="fadeIn">Web</span><img src="img/icons/web-icon.png"/></a>
 						<a href="#cat-1" class="iconz"><span class="fadeIn">Video</span><img src="img/icons/video-icon.png"/></a>
 						<a href="#cat-2" class="iconz"><span class="fadeIn">Branding</span><img src="img/icons/branding-icon.png"/></a>
-						<a href="#cat-3" class="iconz"><span class="fadeIn">Advertising</span><img src="img/icons/advertising-icon.png"/></a>
+						<a href="#cat-3" class="iconz"><span class="fadeIn">Advertising</span><img src="img/icons/announce-icon.png"/></a>
 						<a href="#cat-1" class="iconz"><span class="fadeIn">Marketing</span><img src="img/icons/marketing-icon.png"/></a>
 						<a href="#cat-2" class="iconz"><span class="fadeIn">Illustrations</span><img src="img/icons/illustrations-icon.png"/></a>
 						<a href="#cat-3" class="iconz"><span class="fadeIn">Social</span><img src="img/icons/social-icon.png"/></a>
@@ -243,6 +248,7 @@
 		<script>
 			$( document ).ready(function() {
 			    $('.nav').load('nav.html');
+				$('.what-we-do-carousel').load('what-we-do-carousel.html');
                 $('.footer').load('footer.html');
 
 				var s = skrollr.init( {  } ); //init parallax
